Beta 1.8.7.2615.0 -Added SD UI mode to the Patch Notes screen -Remastered Stadia tooltips (thanks again to NicSonic) -Improved FHD special keys (thanks to NicSonic) -Now, players in the creative mode will play the fall sound, thanks to Creepereater -Now, the conduit will be similar to LE, thanks to Creepereater (same behavior) -Now, the dragon egg teleport particles will be based on the new position, like in LE (thanks to Creepereater) -Now, minecarts won't collide with carpets, like in LE (thanks to Creepereater) -Fixed What's New HTP showing the Legacy4J changelog -Fixed centered stage text in the Legacy Loading screen -Fixed Legacy Item Pickup not following the player's position